# MPointers2.0

./: CMakeLists.txt  README.md  TakeInMindthis.txt  memory_manager.grpc.pb.cc  memory_manager.grpc.pb.h  memory_manager.proto  memory_manager_client.cpp  memory_manager_server.cpp
Client/: ClaseMPointer.h  main.cpp  memory_manager_client.cpp
ProtoCompilation/: memory_manager.grpc.pb.cc  memory_manager.grpc.pb.h  memory_manager.pb.cc  memory_manager.pb.h
Server/: memory_manager_server.cpp
dumpFolderRegistros/: dump_1743573929111.txt  dump_1743573929112.txt  dump_1743575103622.txt  dump_1743575103623.txt  dump_1743575103624.txt  dump_1743575103625.txt  dump_1744259402047.txt  dump_1744259402048.txt  dump_1744259402052.txt  dump_1744259402089.txt  dump_1744271785876.txt  dump_1744271785877.txt  dump_1744271785879.txt  dump_1744271785881.txt  dump_1744271785882.txt  dump_1744271785883.txt  dump_1744271785884.txt  dump_1744271785885.txt  dump_1744271785886.txt  dump_1744271785887.txt  dump_1744271785888.txt  dump_1744271785889.txt  dump_1744271785890.txt  dump_1744271785891.txt  dump_1744271785892.txt  dump_1744271785893.txt  dump_1744271785894.txt  dump_1744271785895.txt  dump_1744271785898.txt  dump_1744271785919.txt  dump_1744271785920.txt  dump_1744271785942.txt  dump_1744271785943.txt  dump_1744271785944.txt
src/proto/: NotasParaEntender.txt  servicios.proto
